--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <p>This html page was created using the touch command like touch index.html </p>
 <p>Change made on 12/02/24</p>
+<p>This is a new feature for the feature1 branch</p>
